--- a/config.json
+++ b/config.json
@@ -1,8 +1,8 @@
 {
-    "ownerNumber": ["6289517185039@s.whatsapp.net","6289517185039@s.whatsapp.net"],
-    "ownerName": "Call Me Zaa🐧",
+    "ownerNumber": ["23491626394@s.whatsapp.net","23491626394@s.whatsapp.net"],
+    "ownerName": "Call Me David🐧",
     "instagram" : "https://instagram.com/nicetry.zaa._",
-    "botName": "Pizzaa🐧-Mdོ ",
+    "botName": "Ony Dave😎-Mdོ ",
     "footer": "api.zeeoneofc.xyz",
     "sessionName": "session",
     "fotoDonasi": "./qris.jpg",
